Fix bad vertical-align value

--- a/share/css-source/06-r2.scss
+++ b/share/css-source/06-r2.scss
@@ -749,7 +749,7 @@ div.custom-field {
 
 a.action-button {
     display: inline-block;
-    vertical-align: center;
+    vertical-align: middle;
 }
 
 form.inline {
